force-app/main/default/objects/Attendee__c/fields/Accessibility_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessibility Requirements</label>
    <type>Checkbox</type>
</CustomField>