force-app/main/default/objects/Attendee__c/fields/Accessibility_Requirements_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Requirements_Comments__c</fullName>
    <label>Accessibility Requirements Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>