force-app/main/default/objects/Attendee__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <label>Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Encirc Attendee</fullName>
            </value>
            <value>
                <fullName>Customer Attendee</fullName>
            </value>
            <value>
                <fullName>Beverages Customer Attendee</fullName>
                <isActive>false</isActive>
                <label>Beverages Customer Attendee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>