force-app/main/default/objects/Attendee__c/fields/Beverages_Customer__c.field-meta.xml
<CustomField>
    <fullName>Beverages_Customer__c</fullName>
    <label>Beverages Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Beverages_Customers</valueSetName>
    </valueSet>
</CustomField>