force-app/main/default/objects/Attendee__c/fields/Beverages_Customer_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Beverages_Customer_Contact_Account__c</fullName>
    <formula>TEXT( Contact__r.Beverages_Customer__c)</formula>
    <label>Beverages Customer Contact Account</label>
    <type>Text</type>
</CustomField>