force-app/main/default/objects/Attendee__c/fields/CompanyOrAccount__c.field-meta.xml
<CustomField>
    <fullName>CompanyOrAccount__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company (Account)</label>
    <type>Text</type>
</CustomField>