force-app/main/default/objects/Attendee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Event Attendee External to Encirc with a Contact in Salesforce</description>
    <inlineHelpText>Type In The Account Name To Retrieve Contacts For The Account</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Attendee</relationshipLabel>
    <relationshipName>Event_Attendee</relationshipName>
    <type>Lookup</type>
</CustomField>