force-app/main/default/objects/Attendee__c/fields/Contact_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Job_Title__c</fullName>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>