force-app/main/default/objects/Attendee__c/fields/Contact_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_Phone__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>