force-app/main/default/objects/Attendee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Created for report use</description>
    <formula>Contact__r.Department</formula>
    <inlineHelpText>Contact Department</inlineHelpText>
    <label>Department</label>
    <type>Text</type>
</CustomField>