force-app/main/default/objects/Attendee__c/fields/Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dietary Requirements</label>
    <type>Checkbox</type>
</CustomField>