force-app/main/default/objects/Attendee__c/fields/Dietary_Requirements_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements_Comments__c</fullName>
    <label>Dietary Requirements Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>