force-app/main/default/objects/Attendee__c/fields/General_Member_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Member_Comments__c</fullName>
    <label>General Member Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>