force-app/main/default/objects/Attendee__c/fields/Golf_Handicap__c.field-meta.xml
<CustomField>
    <fullName>Golf_Handicap__c</fullName>
    <description>This is for the Golf event</description>
    <label>Golf Handicap</label>
    <length>10</length>
    <type>Text</type>
</CustomField>