force-app/main/default/objects/Attendee__c/fields/Hospitality_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Notes__c</fullName>
    <description>Oct 25&apos; Visible on selection of &quot;Club wembley&quot; event object</description>
    <label>Hospitality Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>