force-app/main/default/objects/Attendee__c/fields/Hospitality_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Oct 25&apos; visible on Selection of Club Wembley on Event object</description>
    <label>Hospitality Ordered</label>
    <type>Checkbox</type>
</CustomField>