force-app/main/default/objects/Attendee__c/fields/Hotel_Booking__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick box if hotel required</inlineHelpText>
    <label>Hotel Required</label>
    <type>Checkbox</type>
</CustomField>