force-app/main/default/objects/Attendee__c/fields/Hotel_is_required_both_nights__c.field-meta.xml
<CustomField>
    <fullName>Hotel_is_required_both_nights__c</fullName>
    <description>For reporting purposes</description>
    <formula>IF(Night_before_event__c = TRUE &amp;&amp; Night_of_event__c = TRUE, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel is required both nights</label>
    <type>Checkbox</type>
</CustomField>