force-app/main/default/objects/Attendee__c/fields/Invite_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Invite_Sent_Date__c</fullName>
    <label>Invite Sent Date</label>
    <type>Date</type>
</CustomField>