force-app/main/default/objects/Attendee__c/fields/Is_a_Hotel_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Hotel_Required__c</fullName>
    <label>Is a Hotel Required</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
                <default>true</default>
                <label>TBC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>