force-app/main/default/objects/Attendee__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Needed for FLOW and dynamic fields to work ***Do Not Delete***</description>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>