force-app/main/default/objects/Attendee__c/fields/Night_before_event__c.field-meta.xml
<CustomField>
    <fullName>Night_before_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night before event</label>
    <type>Checkbox</type>
</CustomField>