force-app/main/default/objects/Attendee__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Encirc Personnel With Or Without A User In Salesforce</description>
    <inlineHelpText>Notify A System Administrator If The Personnel Member You Are Looking For Cannot Be Found</inlineHelpText>
    <label>Personnel</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>