force-app/main/default/objects/Attendee__c/listViews/Copy_of_22_05_2025_Bedford_Aerodrome_Filling.listView-meta.xml
<ListView>
    <fullName>Copy_of_22_05_2025_Bedford_Aerodrome_Filling</fullName>
    <columns>Attendee_Type__c</columns>
    <columns>NAME</columns>
    <columns>Personnel__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Beverages_Customer_Contact_Account__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>Tier__c</columns>
    <columns>Status__c</columns>
    <columns>Is_a_Hotel_Required__c</columns>
    <columns>Dietary_Requirements__c</columns>
    <columns>Dietary_Requirements_Comments__c</columns>
    <columns>General_Member_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>FA Cup Final - Crystal Palace v Man City @ Wembley</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Nominated,Invite Sent,Accepted</value>
    </filters>
    <label>17.05.25 - Crystal Palace v Aston Villa</label>
</ListView>