force-app/main/default/objects/Attendee__c/listViews/Copy_of_26_04_25_Crystal_Palace_v_Aston_Villa.listView-meta.xml
<ListView>
    <fullName>Copy_of_26_04_25_Crystal_Palace_v_Aston_Villa</fullName>
    <columns>Attendee_Type__c</columns>
    <columns>NAME</columns>
    <columns>Personnel__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Beverages_Customer_Contact_Account__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>Tier__c</columns>
    <columns>Status__c</columns>
    <columns>Is_a_Hotel_Required__c</columns>
    <columns>Night_before_event__c</columns>
    <columns>Night_of_event__c</columns>
    <columns>Dietary_Requirements__c</columns>
    <columns>Dietary_Requirements_Comments__c</columns>
    <columns>General_Member_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>FA Cup Semi Final - Notts Forest v Man City @ Wembley</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Nominated,Invite Sent,Accepted</value>
    </filters>
    <label>27.04.25 - Notts v Man City</label>
</ListView>