force-app/main/default/objects/Attendee__c/listViews/Copy_of_30_07_2025_Oasis_Wembley_Glass.listView-meta.xml
<ListView>
    <fullName>Copy_of_30_07_2025_Oasis_Wembley_Glass</fullName>
    <columns>Attendee_Type__c</columns>
    <columns>NAME</columns>
    <columns>Personnel__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Beverages_Customer_Contact_Account__c</columns>
    <columns>Tier__c</columns>
    <columns>Status__c</columns>
    <columns>Is_a_Hotel_Required__c</columns>
    <columns>Hotel_is_required_both_nights__c</columns>
    <columns>Night_before_event__c</columns>
    <columns>Night_of_event__c</columns>
    <columns>Dietary_Requirements__c</columns>
    <columns>Dietary_Requirements_Comments__c</columns>
    <columns>General_Member_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>Oasis @ Wembley</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Nominated,Invite Sent,Accepted</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Beverages Customers,Encirc Beverages</value>
    </filters>
    <label>30.07.25 - Oasis @ Wembley - Filling(10)</label>
</ListView>